...
                                    ],
                                  ),
                                  Row(
                                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                                    children: [
                                      Text("Currency Code", style: TextStyle(color: Colors.grey, fontSize: 16.sp),),
                                      Text("TL", style: TextStyle(fontSize: 16.sp),),
                                    ],
                                  ),
                                ],
                              ),
                            ),
                          ),
...
