...
                    style: TextButton.styleFrom(
                      alignment: Alignment.centerLeft,
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.zero,
                      ),
                    ),
                    child: Text("Settings", style: TextStyle(color: Color.fromRGBO(2, 165, 165, 1),),),
                  )
              ),
            ],
          ),
        ),
      ),
...
